include_directories(${PROTOBUF_INCLUDE_DIR})
protobuf_generate_cpp(PROTO_MSG_SRC PROTO_MSG_HEADER messages.proto)
protobuf_generate_cpp(PROTO_ART_SRC PROTO_ART_HEADER articles.proto)
protobuf_generate_cpp(PROTO_NEE_SRC PROTO_NEE_HEADER newspaper_entry.proto)
protobuf_generate_cpp(PROTO_PER_SRC PROTO_PER_HEADER peer.proto)
protobuf_generate_cpp(PROTO_IPM_SRC PROTO_IPM_HEADER ip_map.proto)
add_library(proto_msg ${PROTO_MSG_HEADER} ${PROTO_MSG_SRC})
add_library(proto_art ${PROTO_ART_HEADER} ${PROTO_ART_SRC})
add_library(proto_nee ${PROTO_NEE_HEADER} ${PROTO_NEE_SRC})
add_library(proto_per ${PROTO_PER_HEADER} ${PROTO_PER_SRC})
add_library(proto_ipm ${PROTO_IPM_HEADER} ${PROTO_IPM_SRC})
